pcfiles = \
	longomatch-addins.pc \
	longomatch-db.pc \
	longomatch-core.pc \
	longomatch-drawing.pc \
	longomatch-drawing-cairo.pc \
	longomatch-gui.pc \
	longomatch-gui-helpers.pc \
	longomatch-gui-multimedia.pc \
	longomatch-multimedia.pc \
	longomatch-services.pc \
	longomatch-oxyplot.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = $(pcfiles)

EXTRA_DIST = \
	longomatch-addins.pc.in \
	longomatch-db.pc.in \
	longomatch-core.pc.in \
	longomatch-drawing.pc.in \
	longomatch-drawing-cairo.pc.in \
	longomatch-gui.pc.in \
	longomatch-gui-helpers.pc.in \
	longomatch-oxyplot.pc.in

CLEANFILES = $(pcfiles)
