pcfiles = \
	longomatch-addins.pc \
	longomatch-db.pc \
	longomatch-core.pc \
	longomatch-drawing.pc \
	longomatch-gui.pc \
	longomatch-services.pc \
	longomatch-oxyplot.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = $(pcfiles)

EXTRA_DIST = \
	longomatch-addins.pc.in \
	longomatch-db.pc.in \
	longomatch-core.pc.in \
	longomatch-drawing.pc.in \
	longomatch-gui.pc.in \
	longomatch-services.pc.in \
	longomatch-oxyplot.pc.in

CLEANFILES = $(pcfiles)
