iconsdir = @datadir@/@PACKAGE@/icons/

nobase_dist_icons_DATA = \
	hicolor/scalable/apps/longomatch.svg \
	hicolor/scalable/actions/longomatch-import.svg \
	hicolor/scalable/actions/longomatch-new.svg \
	hicolor/scalable/actions/longomatch-open.svg \
	hicolor/scalable/actions/longomatch-preferences.svg \
	hicolor/scalable/actions/longomatch-project.svg \
	hicolor/scalable/actions/longomatch-sportconfig.svg \
	hicolor/scalable/actions/longomatch-teamconfig.svg \
	hicolor/index.theme

#EXTRA_DIST = longomatch.ico
