imagesdir = @datadir@/@PACKAGE@/images
nobase_dist_images_DATA = Makefile.am \
	fields/field-full-teameditor.svg \
	fields/field-full.svg \
	fields/field-goal.svg \
	fields/field-half.svg \
	longomatch-dark-bg.svg \
	longomatch-light-bg.svg \
	player/arrow-in.svg \
	player/arrow-out.svg \
	player/photo.svg
