imagesdir = @datadir@/@PACKAGE@/images
nobase_dist_images_DATA = Makefile.am \
	dashboard/longomatch-event.svg \
	dashboard/longomatch-penalties.svg \
	dashboard/longomatch-score.svg \
	dashboard/longomatch-tag.svg \
	dashboard/longomatch-timer.svg \
	fields/field-full-teameditor.svg \
	fields/field-full.svg \
	fields/field-goal.svg \
	fields/field-half.svg \
	longomatch-dark-bg.svg \
	longomatch-light-bg.svg \
	player/arrow-in.svg \
	player/arrow-out.svg \
	player/photo.svg
