imagesdir = @datadir@/@PACKAGE@/images
nobase_dist_images_DATA = Makefile.am \
	cursors/angle \
	cursors/arrow \
	cursors/cross \
	cursors/ellipse \
	cursors/eraser \
	cursors/freehand \
	cursors/hand_closed \
	cursors/hand_opened \
	cursors/hand_select \
	cursors/longomatch-drag-select-moving.png \
	cursors/number \
	cursors/player \
	cursors/rect \
	cursors/text \
	cursors/zoom \
	dashboard/longomatch-event.svg \
	dashboard/longomatch-penalties.svg \
	dashboard/longomatch-score.svg \
	dashboard/longomatch-tag.svg \
	dashboard/vas-timer.svg \
	fields/field-full-teameditor.svg \
	fields/field-full.svg \
	fields/field-goal.svg \
	fields/field-half.svg \
	longomatch-dark-bg.svg \
	longomatch-light-bg.svg \
	longomatch-pro-small.png \
	longomatch-splash.svg \
	player/arrow-in.svg \
	player/arrow-out.svg \
	player/photo.svg \
	timeline-snap-land-cue.svg
