themedir = @datadir@/@PACKAGE@/theme
nobase_dist_theme_DATA = Makefile.am \
	gtk-2.0/Arrows/arrow-up-down.png \
	gtk-2.0/Buttons/button-entry-default.svg \
	gtk-2.0/Buttons/button-entry-prelight.svg \
	gtk-2.0/Buttons/button-entry-pressed.svg \
	gtk-2.0/Buttons/button-rect-default.svg \
	gtk-2.0/Buttons/button-rect-prelight.svg \
	gtk-2.0/Buttons/button-rect-pressed.svg \
	gtk-2.0/Buttons/button-rounded-default.svg \
	gtk-2.0/Buttons/button-rounded-prelight.svg \
	gtk-2.0/Buttons/button-rounded-pressed.svg \
	gtk-2.0/Buttons/button-square-default.svg \
	gtk-2.0/Buttons/button-square-focus.svg \
	gtk-2.0/Buttons/button-square-prelight.svg \
	gtk-2.0/Buttons/button-square-pressed.svg \
	gtk-2.0/Buttons/null.png \
	gtk-2.0/Buttons/null_bg.png \
	gtk-2.0/Buttons/null_bg_light.png \
	gtk-2.0/Check-Radio/checkbox-checked-insensitive.png \
	gtk-2.0/Check-Radio/checkbox-checked.png \
	gtk-2.0/Check-Radio/checkbox-unchecked-insensitive.png \
	gtk-2.0/Check-Radio/checkbox-unchecked.png \
	gtk-2.0/Check-Radio/option-checked-insensitive.png \
	gtk-2.0/Check-Radio/option-checked.png \
	gtk-2.0/Check-Radio/option-unchecked-insensitive.png \
	gtk-2.0/Check-Radio/option-unchecked.png \
	gtk-2.0/Check-Radio/treeview-checkbox-checked-insensitive.svg \
	gtk-2.0/Check-Radio/treeview-checkbox-checked.svg \
	gtk-2.0/Check-Radio/treeview-checkbox-unchecked-insensitive.svg \
	gtk-2.0/Check-Radio/treeview-checkbox-unchecked-prelight.svg \
	gtk-2.0/Check-Radio/treeview-checkbox-unchecked.svg \
	gtk-2.0/Entry/combo-entry-border-bg-insensitive.png \
	gtk-2.0/Entry/combo-entry-border-bg.png \
	gtk-2.0/Entry/team-combo-entry-blue.png \
	gtk-2.0/Entry/team-combo-entry-red.png \
	gtk-2.0/Expander/expander-collapsed-active.svg \
	gtk-2.0/Expander/expander-collapsed-normal.svg \
	gtk-2.0/Expander/expander-collapsed-prelight.svg \
	gtk-2.0/Expander/expander-expanded-active.svg \
	gtk-2.0/Expander/expander-expanded-normal.svg \
	gtk-2.0/Expander/expander-expanded-prelight.svg \
	gtk-2.0/Handles/handle-h.png \
	gtk-2.0/Handles/handle-v.png \
	gtk-2.0/Range/null.png \
	gtk-2.0/Range/slider-active.png \
	gtk-2.0/Range/slider-insensitive.png \
	gtk-2.0/Range/slider.png \
	gtk-2.0/Range/trough-horizontal-lower.png \
	gtk-2.0/Range/trough-horizontal.png \
	gtk-2.0/Range/trough-vertical-lower.png \
	gtk-2.0/Range/trough-vertical.png \
	gtk-2.0/Scrollbar/arrow-down-active.png \
	gtk-2.0/Scrollbar/arrow-down-inactive.png \
	gtk-2.0/Scrollbar/arrow-down.png \
	gtk-2.0/Scrollbar/arrow-left-active.png \
	gtk-2.0/Scrollbar/arrow-left-inactive.png \
	gtk-2.0/Scrollbar/arrow-left.png \
	gtk-2.0/Scrollbar/arrow-right-active.png \
	gtk-2.0/Scrollbar/arrow-right-inactive.png \
	gtk-2.0/Scrollbar/arrow-right.png \
	gtk-2.0/Scrollbar/arrow-up-active.png \
	gtk-2.0/Scrollbar/arrow-up-inactive.png \
	gtk-2.0/Scrollbar/arrow-up.png \
	gtk-2.0/Scrollbar/slider-horizontal-active.png \
	gtk-2.0/Scrollbar/slider-horizontal.png \
	gtk-2.0/Scrollbar/slider-vertical-active.png \
	gtk-2.0/Scrollbar/slider-vertical.png \
	gtk-2.0/Scrollbar/trough-horizontal.png \
	gtk-2.0/Scrollbar/trough-vertical.png \
	gtk-2.0/Shadows/boxshadow.svg \
	gtk-2.0/Stock/gtk-about.svg \
	gtk-2.0/Stock/gtk-add.svg \
	gtk-2.0/Stock/gtk-close.svg \
	gtk-2.0/Stock/gtk-dialog-info.png \
	gtk-2.0/Stock/gtk-dialog-warning.png \
	gtk-2.0/Stock/gtk-edit.svg \
	gtk-2.0/Stock/gtk-fullscreen.svg \
	gtk-2.0/Stock/gtk-help.svg \
	gtk-2.0/Stock/gtk-new.svg \
	gtk-2.0/Stock/gtk-ok.svg \
	gtk-2.0/Stock/gtk-open.svg \
	gtk-2.0/Stock/gtk-quit.svg \
	gtk-2.0/Stock/gtk-refresh.svg \
	gtk-2.0/Stock/gtk-remove.svg \
	gtk-2.0/Stock/gtk-save-as.svg \
	gtk-2.0/Stock/gtk-save.svg \
	gtk-2.0/Tabs/notebook-gap-horiz.png \
	gtk-2.0/Tabs/notebook-gap-vert.png \
	gtk-2.0/Tabs/notebook.png \
	gtk-2.0/Tabs/tab-bottom-active.png \
	gtk-2.0/Tabs/tab-bottom.png \
	gtk-2.0/Tabs/tab-left-active.png \
	gtk-2.0/Tabs/tab-left.png \
	gtk-2.0/Tabs/tab-right-active.png \
	gtk-2.0/Tabs/tab-right.png \
	gtk-2.0/Tabs/tab-top-active.png \
	gtk-2.0/Tabs/tab-top.png \
	gtk-2.0/Top_Bar/lamp_active.png \
	gtk-2.0/Top_Bar/lamp_idle.png \
	gtk-2.0/Top_Bar/lamp_prelight.png \
	gtk-2.0/Top_Bar/topbar-button-down.svg \
	gtk-2.0/Top_Bar/topbar-button-idle.svg \
	gtk-2.0/Top_Bar/topbar-button-prelight.svg \
	gtk-2.0/Top_Bar/topbar_bg.png \
	gtk-2.0/Top_Bar/toptab_bg_body_active.png \
	gtk-2.0/Top_Bar/toptab_bg_body_idle.png \
	gtk-2.0/Top_Bar/toptab_bg_body_prelight.png \
	gtk-2.0/Top_Bar/toptab_bg_left_active.png \
	gtk-2.0/Top_Bar/toptab_bg_left_idle.png \
	gtk-2.0/Top_Bar/toptab_bg_left_prelight.png \
	gtk-2.0/Top_Bar/toptab_bg_right_active.png \
	gtk-2.0/Top_Bar/toptab_bg_right_idle.png \
	gtk-2.0/Top_Bar/toptab_bg_right_prelight.png \
	gtk-2.0/buttons.rc \
	gtk-2.0/checkbox.rc \
	gtk-2.0/combobox.rc \
	gtk-2.0/entry.rc \
	gtk-2.0/gtkrc \
	gtk-2.0/handles.rc \
	gtk-2.0/notebook.rc \
	gtk-2.0/radiobutton.rc \
	gtk-2.0/range.rc \
	gtk-2.0/scrollbar.rc \
	gtk-2.0/separator.rc \
	gtk-2.0/shadow.rc \
	gtk-2.0/toggletab.rc \
	gtk-2.0/topbar.rc \
	gtk-2.0/treeview.rc \
	longomatch-dark.json
